# jodie

./: .gitignore  README.md  install-jodie.sh  pyproject.toml  requirements.txt  setup.py  test_jodie.py
jodie/: __init__.py  __main__.py  contact.py  jodiecli.py
jodie/cli/: __doc__.py  __init__.py  __main__.py
jodie/contact/: __init__.py  contact.py
jodie/parsers/: __init__.py  baseparser.py  emailparser.py  jodieparser.py  nameparser.py  parsers.py
macos/: install-jodie.sh
pyinstaller-build/: pyinstaller-build.sh  pyinstaller.py  pyproject-toml-poetry.toml
